--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>lissa-learning</groupId>
     <artifactId>platform-auth-lib</artifactId>
-    <version>v.0.0.4</version>
+    <version>v.0.0.5</version>
     <packaging>jar</packaging>
     <name>Lissa-Learning auth lib</name>
 
@@ -31,7 +31,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
